Added Droid example of bug (doesn't exists on droid side)

--- a/TipCalc/TipCalc.UI.Droid/Resources/layout/View_Tip.axml
+++ b/TipCalc/TipCalc.UI.Droid/Resources/layout/View_Tip.axml
@@ -46,4 +46,9 @@
         android:textSize="24dp"
         android:gravity="center"
         local:MvxBind="Text Tip" />
+    <Button
+        android:id="@+id/btnTest"
+        android:text="test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
